Maintenance: address some deprecation warnings